--- a/svn/tools_contrib.html
+++ b/svn/tools_contrib.html
@@ -264,7 +264,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="tweak_log_cgi"
     href="http://svn.collab.net/repos/svn/trunk/contrib/cgi/tweak-log.cgi">tweak-log.cgi</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/cgi">contrib/cgi</a>)</h3>
-  <p>通过web网页访问来修改所提交的svn版本库的修订版本日志。
+  <p>直接通过web访问来修改SVN版本库中已提交的日志信息。
   </p>
 </div>
 
@@ -292,25 +292,25 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="diff_to_logmsg_vim"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/vim/diff-to-logmsg.vim">diff-to-logmsg.vim</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/vim">contrib/client-side/vim</a>)</h3>
-  <p>将'diff -urp'命令输出内容转换成一个修改日志信息的结构。</p>
+  <p>将'diff -urp'命令输出的内容转换成日志信息结构。</p>
 
 
   <h3><a name="diff3wrap_bat"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/diff3wrap.bat">diff3wrap.bat</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>对diff3/merge程序的运行进行了一些封装.</p>
+  <p>对diff3/merge程序做了简单的封装.</p>
 
 
   <h3><a name="diffwrap_bat"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/diffwrap.bat">diffwrap.bat</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>对diff程序进行了封装.</p>
+  <p>对diff程序进行了简单的封装.</p>
 
 
   <h3><a name="dsvn_el"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/emacs/dsvn.el">dsvn.el</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/emacs/dsvn.el">contrib/client-side/emacs/dsvn.el</a>)</h3>
-  <p>一个提供给Emacs的接口，类似于CVS提供的pcl-cvs接口。
+  <p>提供给Emacs的SVN接口，类似于CVS提供的pcl-cvs接口。
   </p>
   <p>同时参看 <a href="#psvn_el">psvn.el</a>.</p>
 
@@ -328,7 +328,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="psvn_el"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/emacs/psvn.el">psvn.el</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/emacs/psvn.el">contrib/client-side/emacs/psvn.el</a>)</h3>
-  <p>一个提供给Emacs的接口，类似于CVS提供的pcl-cvs接口。
+  <p>提供给Emacs的SVN接口，类似于CVS提供的pcl-cvs接口。
   </p>
   <p>同时参看 <a href="#dsvn_el">dsvn.el</a>.</p>
 
@@ -336,7 +336,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="search_svnlog_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/search-svnlog.pl">search-svnlog.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>检索显示包含某个特别内容的日志信息。</p>
+  <p>根据匹配字符串检索特定的日志信息</p>
 
 
   <h3><a name="server_version_py"
@@ -355,7 +355,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_clean"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn-clean">svn-clean</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>从SVN的工作拷贝中删除没有版本记录的所有文件。</p>
+  <p>从本地工作拷贝中删除所有未被版本控制的文件。</p>
 
 
   <h3><a name="svn_graph_pl"
@@ -373,7 +373,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_push_c"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn-push/svn-push.c">svn-push.c</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn-push">contrib/client-side/svn-push</a>)</h3>
-  <p>将一个版本库(允许网络访问)的所有修改提交到另外一个版本库(允许网络访问).
+  <p>将一个可连接到的版本库的修改集提交到另外一个可连接到的版本库.
   </p>
 
 
@@ -389,16 +389,16 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_viewdiff"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn-viewdiff">svn-viewdiff</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>基于GNU协议的对FileMerge程序进行GNU diff wrapper for FileMerge.
+  <p>FileMerge的diff接口封装,该脚本基于GNU协议.(译者注:该脚本的接口和diff工具一致,输出的内容则会通过FileMerge的接口传给FileMerge程序.
   </p>
-  <p>(FileMerge是Mac OS中X开发工具软件包中的一个图形化的比较工具。)
+  <p>(FileMerge是Mac OS中X开发工具软件包中的一个优秀的图形化的比较工具。)
   </p>
 
 
   <h3><a name="svn_vim"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/vim/svn.vim">svn.vim</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/vim">contrib/client-side/vim</a>)</h3>
-  <p>Vim所使用的实现SVN修订提交日志信息模板语法高亮的文件。</p>
+  <p>使Vim能够高亮显示SVN提交日志模板语法的VIM插件。</p>
 
 
   <h3><a name="svn2cl_sh"
@@ -407,7 +407,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <p>针对svn2cl.xsl的前端shell脚本，以正确的参数调用xsltproc。
   </p>
   <p>同时参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/README">README</a>.</p>
-  <p>相关文件：
+  <p>相关文件:
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/svn2cl.1">svn2cl.1</a>
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/svn2cl.xsl">svn2cl.xsl</a>
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/svn2html.css">svn2html.css</a>
@@ -426,25 +426,21 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_apply_autoprops_py"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_apply_autoprops.py">svn_apply_autoprops.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>这个脚本会从$HOME/.subversion/config中读取预先定义好的想要自动实现
-     的属性，根据它们对当前工作拷贝中的所有文件和子目录进行递归修改。
+  <p>这个脚本会从$HOME/.subversion/config中读取预定义的自动属性(auto-property)(译者注:自动属性是SVN根据不同文件类型自动添加在每个新增的文件/文件夹上的属性)，然后将其递归应用到当前工作拷贝中的所有文件/文件夹.
   </p>
 
 
   <h3><a name="svn_export_empty_files_py"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_export_empty_files.py">svn_export_empty_files.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>这个脚本用来从一个subversion版本库中导出一个具有相同目录结构，但是只包含版本库中所有文件
-     的文件名而不含有文件的实际内容。这个空目录树中也不包含有.svn子目录。目的是用于生成一个不是用于工作的工作拷贝，方便文件的
-     检索。
+  <p>这个脚本用来从subversion版本库中导出目录文件结构，但是不包含原始文件上的内容,也就是说每个文件都是0字节文件.同时.svn目录也不会被导出.这个主要用于快速检索文件,而不是作为实际开发使用的工作拷贝.
   </p>
 
 
   <h3><a name="svn_load_dirs_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_load_dirs/svn_load_dirs.pl.in">svn_load_dirs.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_load_dirs">contrib/client-side/svn_load_dirs</a>)</h3>
-  <p>这个perl脚本是设计用来向subversion服务器中导入若干个子目录。当用户有一个包含有大量.zip文件或者tar.{Z,gz,bz2}文件
-     的文件包想要导入到subversion服务器中时，这个脚本尤其有用。
+  <p>这个perl脚本是设计用来向subversion服务器中导入若干个子目录。当用户有一个包含有大量.zip文件或者tar.{Z,gz,bz2}文件的文件包想要导入到subversion服务器中时，这个脚本尤其有用。
   </p>
   <p>同时参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_load_dirs/svn_load_dirs.README">svn_load_dirs.README</a>.</p>
   <p>相关文件：
@@ -455,7 +451,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_update_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_update.pl">svn_update.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>运行svn update，强制对所有文件产生需要用diff3合并的冲突。
+  <p>运行svn update，并把那些原本将会被diff3进行合并的文件视为冲突处理.
   </p>
   <p>工作区<a
        href="http://subversion.tigris.org/issues/show_bug.cgi?id=2048"
@@ -467,7 +463,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svncopy_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/svncopy.pl.in">svncopy.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy">contrib/client-side/svncopy</a>)</h3>
-  <p>用于分支和标记拷贝的使用脚本。</p>
+  <p>用于分支和标记拷贝的实用脚本。</p>
   <p>参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/svncopy.README">svncopy.README</a>.</p>
   <p>相关文件：
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/testsvncopy.pl.in">testsvncopy.pl</a>
@@ -477,20 +473,20 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svnmerge_py"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge/svnmerge.py">svnmerge.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge">contrib/client-side/svnmerge</a>)</h3>
-  <p>合并跟踪脚本。</p>
+  <p>用于跟踪合并过程的脚本。</p>
   <p>同时参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge/svnmerge.README">svnmerge.README</a>.</p>
 
 
   <h3><a name="svnmerge_sh"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge/svnmerge.sh">svnmerge.sh</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge">contrib/client-side/svnmerge</a>)</h3>
-  <p>合并跟踪脚本，是svnmerge.py的前身。</p>
+  <p>用于跟踪合并过程的脚本,是svnmerge.py的前身。</p>
 
 
   <h3><a name="vc_svn_el"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/emacs/vc-svn.el">vc-svn.el</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side/emacs</a>)</h3>
-  <p>支持Emacs VC的Subversion
+  <p>Subversion的Emacs接口,使Subversion能够集成到Emacs的VC中.(译者注:vc是emacs的版本控制模式)
   </p>
   <p>需要注意的是,在SVN的版本目录下的vc_svn_el并不是主开发版本,
   	最新的版本是放置在FSF Emacs版本目录下,可以通过
@@ -502,8 +498,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="wcgrep"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/wcgrep">wcgrep</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>在一个在Subersion的工作目录中进行字符串查找的很有用工具，
-     在本质上和grep命令的功能是一样的。
+  <p>在一个在Subersion的工作目录中进行字符串查找的很有用工具，在本质上和grep命令的功能是一样的。
   </p>
 </div>
 
@@ -521,8 +516,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="contribulyze_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/contribulyze.py">contribulyze.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>一些subversion的项目的日志信息里面包含
-     某些数据，可以解析跟踪出哪些用户对该项目做出过修改。这个脚本就是用来收集这些数据的。
+  <p>一些subversion项目的日志信息里面包含某些元数据，可以解析跟踪出哪些用户对该项目做出过修改。这个脚本就是用来收集这些数据的。
   </p>
 
 
@@ -535,14 +529,14 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="gcov_patch"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/gcov.patch">gcov.patch</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>这个补丁是用来生成一个报告文件，显示当测试组件在运行的时候那些行的C代码执行到了。
+  <p>这个补丁是用来生成一个报告文件，显示测试组件运行时覆盖到的C代码。
   </p>
 
 
   <h3><a name="getsigs_pl"
     href="http://svn.collab.net/repos/svn/trunk/tools/dist/getsigs.pl">getsigs.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dist">tools/dist</a>)</h3>
-  <p>这个脚本实现比较丑陋,它主要用来验证并获取发行的tar文件的签名,我们在声明中使用这些内容.
+  <p>这个脚本用来验证并获取发行的tar文件的签名,我们在声明中会使用这些内容.
   </p>
 
 
@@ -556,15 +550,15 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="graph_dav_servers_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/graph-dav-servers.py">graph-dav-servers.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>这原先是用来在svn的DAV服务器上生成一副不错的图片用的This was originally a quick hack to make a pretty picture of svn
-     DAV servers.
+  <p>这原先是用来在svn的DAV服务器上生成一副不错的图片用的(This was originally a quick hack to make a pretty picture of svn
+     DAV servers).
   </p>
 
 
   <h3><a name="ff2csv_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/iz/ff2csv.py">ff2csv.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev/iz">tools/dev/iz</a>)</h3>
-  <p>把find-fix.py的输出转换成excel可以打开的csv文件格式。</p>
+  <p>把find-fix.py的输出转换成excel可以处理的csv文件格式。</p>
 
 
   <h3><a name="find_fix_py"
@@ -600,9 +594,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="normalize_dump_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/normalize-dump.py">normalize-dump.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>读取Subversion的Dumpfile中(如果没有指定文件,则从标准输入设备中读取),
-  	然后格式化其中包含的所有元信息,并输出经过统计的,已排序的信息.
-  	这在生成不同样式的dumpfile方面比较有用.
+  <p>读取Subversion的转储文件(Dumpfile)(如果没有指定文件,则从标准输入设备中读取),然后格式化其中包含的所有元信息,并输出经过统计的,已排序的信息.这在生成不同样式的转储文件方面比较有用.
   </p>
 
 
@@ -700,19 +692,19 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="diff_c"
     href="http://svn.collab.net/repos/svn/trunk/tools/diff/diff.c">diff.c</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/diff">tools/diff</a>)</h3>
-  <p>一个使用了subversion总的diff比较功能的diff比较程序。</p>
+  <p>一个使用了subversion比较函数实现的diff比较程序。</p>
 
 
   <h3><a name="diff3_c"
     href="http://svn.collab.net/repos/svn/trunk/tools/diff/diff3.c">diff3.c</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/diff">tools/diff</a>)</h3>
-  <p>一个使用了subversion总的diff比较功能的diff3比较程序。</p>
+  <p>一个使用了subversion比较函数实现的diff3比较程序。</p>
 
 
   <h3><a name="diff4_c"
     href="http://svn.collab.net/repos/svn/trunk/tools/diff/diff4.c">diff4.c</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/diff">tools/diff</a>)</h3>
-  <p>一个使用了subversion总的diff比较功能的diff4比较程序。</p>
+  <p>一个使用了subversionh比较函数实现的diff4比较程序。</p>
 </div>
 
 
@@ -723,7 +715,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="case_insensitive_py"
     href="http://svn.collab.net/repos/svn/trunk/contrib/hook-scripts/case-insensitive.py">case-insensitive.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/hook-scripts">contrib/hook-scripts</a>)</h3>
-  <p>一个预提交的挂钩程序，用来检查大小写敏感的文件名冲突。
+  <p>一个预提交的钩子程序，用来检查大小写敏感的文件名冲突。
   </p>
 
 
@@ -731,9 +723,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="check_mime_type_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/hook-scripts/check-mime-type.pl">check-mime-type.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/hook-scripts">contrib/hook-scripts</a>)</h3>
-  <p>检查每个新增加的文件是否都设置了svn:mime-type属性,
-  	如果文件的svn:mime-type属性值匹配text/*模式的话,那么该文件必须同时设置svn:eol-style属性.
-  	如果任一文件没有通过检查,则返回详细的错误信息给用户,并给出建议的解决方案,并且中止当前提交动作.
+  <p>检查每个新增加的文件是否都设置了svn:mime-type属性,如果文件的svn:mime-type属性值匹配"text/*"模式的话,那么该文件必须同时设置svn:eol-style属性.如果任一文件没有通过检查,则返回详细的错误信息给用户,并给出建议的解决方案,并且中止当前提交动作.
   </p>
 
 
@@ -817,8 +807,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="pre_lock_require_needs_lock_py"
     href="http://svn.collab.net/repos/svn/trunk/contrib/hook-scripts/pre-lock-require-needs-lock.py">pre-lock-require-needs-lock.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/hook-scripts">contrib/hook-scripts</a>)</h3>
-  <p>这个脚本，是作为一个预锁定的挂钩脚本，通常被用户用来
-     校验用户试图锁定的路径是否设置有svn:needs-lock属性。如果有设置，则返回成功的信息。
+  <p>这个脚本，是作为一个预锁定的挂钩脚本，通常被用户用来校验用户试图锁定的路径是否设置有svn:needs-lock属性。如果有设置，则返回成功的信息。
   </p>
 
 
@@ -833,9 +822,8 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svnperms_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/hook-scripts/svnperms.py">svnperms.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/hook-scripts">tools/hook-scripts</a>)</h3>
-  <p>一个用来检查写权限的预提交的挂钩脚本，类似于
-     <a href="#commit_access_control_pl">commit-access-control.pl</a>,
-     但是使用的不同的语法搁置，可以通过运行'svnperms.py -h'来获得使用帮助。
+  <p>一个用来检查写权限的预提交的挂钩脚本，类似于<a href="#commit_access_control_pl">commit-access-control.pl</a>,
+     但是使用的不同的语法，可以通过运行'svnperms.py -h'来获得使用帮助。
   </p>
   <p>相关文件：
     <a href="http://svn.collab.net/repos/svn/trunk/tools/hook-scripts/svnperms.conf.example">svnperms.conf.example</a>
@@ -845,8 +833,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="verify_po_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/hook-scripts/verify-po.py">verify-po.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/hook-scripts">tools/hook-scripts</a>)</h3>
-  <p>这个预提交的挂钩脚本用来检查PO文
-     件的内容是否以UTF-8的编码格式提交给了版本库。
+  <p>这个预提交的钩子脚本(precommit hook)用来检查当前提交的PO文件是否是UTF-8编码的。
   </p>
 </div>
 
@@ -862,7 +849,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="po_update_sh"
     href="http://svn.collab.net/repos/svn/trunk/tools/po/po-update.sh">po-update.sh</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/po">tools/po</a>)</h3>
-  <p>该脚本讲生成subversion的pot文件，同时更新本地的。</p>
+  <p>该脚本用来生成subversion的pot文件，同时更新当前的语言资源包。</p>
 
 </div>
 
@@ -879,8 +866,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="backup_recipe_sh"
     href="http://svn.collab.net/repos/svn/trunk/contrib/server-side/backup-recipe.sh">backup-recipe.sh</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/server-side">contrib/server-side</a>)</h3>
-  <p>这个脚本通过一个标准的full+incrementals进程，来演示
-     对一个工作中的subversion版本库进行备份和恢复的方法。
+  <p>这个脚本通过一个标准的full+incrementals处理流程，展示了如何对一个在线的subversion版本库进行备份和恢复的方法。
   </p>
 
 
@@ -895,8 +881,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="mod_dontdothat_c"
     href="http://svn.collab.net/repos/svn/trunk/contrib/server-side/mod_dontdothat/mod_dontdothat.c">mod_dontdothat.c</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/server-side/mod_dontdothat">contrib/server-side/mod_dontdothat</a>)</h3>
-  <p>一个Apache的模块，允许你阻止大数据量的subversion请求，
-     比如从根目录开始导出一个很大的版本库。
+  <p>一个Apache的模块，允许你阻止大数据量的subversion请求,比如从根目录开始检出一个很大的版本库。
   </p>
   <p>同时参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/server-side/mod_dontdothat/README">README</a>.</p>
 
@@ -904,8 +889,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_backup_dumps_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/server-side/svn-backup-dumps.py">svn-backup-dumps.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/server-side">tools/server-side</a>)</h3>
-  <p>这个脚本用于从Windows和类Unix系统上的SVN版本库中创建一些增量的输出文件,
-  	这个脚本主要用在执行一些定时的计划任务,还有post-commit钩子脚本中.
+  <p>这个脚本用于从Windows和类Unix系统上的SVN版本库中创建一些增量的转储文件,这个脚本主要用在执行一些定时的计划任务,还有post-commit钩子脚本中.
   </p>
 
 
@@ -925,7 +909,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
     href="http://svn.collab.net/repos/svn/trunk/contrib/server-side/svnmirror.sh">svnmirror.sh</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/server-side">contrib/server-side</a>)</h3>
   <p>为subversion版本库做一个镜像。这个脚本支持通过ssh和svn工具
-     来加入或者取消修改。
+     来发送修改到其他版本库或从其他版本库获取最新的修改。
   </p>
 </div>
 
