--- a/trunk/svn/tools_contrib.html
+++ b/trunk/svn/tools_contrib.html
@@ -318,7 +318,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svnmucc_c"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmucc/svnmucc.c">svnmucc.c</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmucc">contrib/client-side/svnmucc</a>)</h3>
-  <p>多个URL命令的客户端（Multiple URL Command Client）：可以将通过URL方式提交的一系列mv，cp和rm命令合并成一个提交命令。
+  <p>多个URL命令的客户端（Multiple URL Command Client）：可以将通过URL方式提交的一系列mv、cp和rm命令合并成一个提交命令。
   </p>
   <p>相关文件:
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmucc/svnmucc-test.py">svnmucc-test.py</a>
@@ -373,7 +373,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_push_c"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn-push/svn-push.c">svn-push.c</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn-push">contrib/client-side/svn-push</a>)</h3>
-  <p>将一个可连接到的版本库的修改集提交到另外一个可连接到的版本库.
+  <p>将一个可连接到的版本库的修改集提交到另外一个可连接到的版本库（通过网络）。
   </p>
 
 
@@ -382,14 +382,14 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
   <p>用Filemerge来解决Subersion的修订冲突。
   </p>
-  <p>(FileMerge是Mac OS中X开发工具软件包中的一个图形化的比较工具。)
+  <p>（FileMerge是Mac OS中X开发工具软件包中的一个图形化的比较工具。）
   </p>
 
 
   <h3><a name="svn_viewdiff"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn-viewdiff">svn-viewdiff</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>FileMerge的diff接口封装,该脚本基于GNU协议.(译者注:该脚本的接口和diff工具一致,输出的内容则会通过FileMerge的接口传给FileMerge程序.
+  <p>FileMerge的diff接口封装,该脚本基于GNU协议。(译者注:该脚本的接口和diff工具一致，输出的内容则会通过FileMerge的接口传给FileMerge程序。
   </p>
   <p>(FileMerge是Mac OS中X开发工具软件包中的一个优秀的图形化的比较工具。)
   </p>
@@ -406,8 +406,8 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl">contrib/client-side/svn2cl</a>)</h3>
   <p>针对svn2cl.xsl的前端shell脚本，以正确的参数调用xsltproc。
   </p>
-  <p>同时参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/README">README</a>.</p>
-  <p>相关文件:
+  <p>同时参看<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/README">README</a>。</p>
+  <p>相关文件：
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/svn2cl.1">svn2cl.1</a>
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/svn2cl.xsl">svn2cl.xsl</a>
     <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn2cl/svn2html.css">svn2html.css</a>
@@ -418,22 +418,21 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_all_diffs_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_all_diffs.pl">svn_all_diffs.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>一个perl脚本，用来获取修改了某个特定文件或者子目录的所有修订版本，并且显示用'svn diff'命令输出的所有这些修订版本的
-     修改内容。非常适用于追踪和观察一个文件中特定某一行的改变。
+  <p>一个perl脚本，用来获取修改了某个特定文件或者子目录的所有修订版本，并且显示用'svn diff'命令输出的所有这些修订版本的修改内容。非常适用于追踪和观察一个文件中特定某一行的改变。
   </p>
 
 
   <h3><a name="svn_apply_autoprops_py"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_apply_autoprops.py">svn_apply_autoprops.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>这个脚本会从$HOME/.subversion/config中读取预定义的自动属性(auto-property)(译者注:自动属性是SVN根据不同文件类型自动添加在每个新增的文件/文件夹上的属性)，然后将其递归应用到当前工作拷贝中的所有文件/文件夹.
+  <p>这个脚本会从$HOME/.subversion/config中读取预定义的自动属性(auto-property)(译者注：自动属性是SVN根据不同文件类型自动添加在每个新增的文件/文件夹上的属性)，然后将其递归应用到当前工作拷贝中的所有文件/文件夹。
   </p>
 
 
   <h3><a name="svn_export_empty_files_py"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_export_empty_files.py">svn_export_empty_files.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>这个脚本用来从subversion版本库中导出目录文件结构，但是不包含原始文件上的内容,也就是说每个文件都是0字节文件.同时.svn目录也不会被导出.这个主要用于快速检索文件,而不是作为实际开发使用的工作拷贝.
+  <p>这个脚本用来从subversion版本库中导出目录文件结构，但是不包含原始文件上的内容，也就是说每个文件都是0字节文件。同时.svn目录也不会被导出，这个主要用于快速检索文件，而不是作为实际开发使用的工作拷贝。
   </p>
 
 
@@ -451,12 +450,11 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svn_update_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svn_update.pl">svn_update.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side</a>)</h3>
-  <p>运行svn update，并把那些原本将会被diff3进行合并的文件视为冲突处理.
+  <p>运行svn update，并把那些原本将会被diff3进行合并的文件视为冲突处理。
   </p>
   <p>工作区<a
        href="http://subversion.tigris.org/issues/show_bug.cgi?id=2048"
-     >issue 2048</a> 在r13383中得到解决并且在
-     svn 1.2.0中发布。
+     >issue 2048</a>在r13383中得到解决并且在svn 1.2.0中发布。
   </p>
 
 
@@ -464,9 +462,9 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/svncopy.pl.in">svncopy.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy">contrib/client-side/svncopy</a>)</h3>
   <p>用于分支和标记拷贝的实用脚本。</p>
-  <p>参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/svncopy.README">svncopy.README</a>.</p>
+  <p>参看<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/svncopy.README">svncopy.README</a>。</p>
   <p>相关文件：
-    <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/testsvncopy.pl.in">testsvncopy.pl</a>
+    <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svncopy/testsvncopy.pl.in">testsvncopy.pl</a>。
   </p>
 
 
@@ -474,7 +472,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge/svnmerge.py">svnmerge.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge">contrib/client-side/svnmerge</a>)</h3>
   <p>用于跟踪合并过程的脚本。</p>
-  <p>同时参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge/svnmerge.README">svnmerge.README</a>.</p>
+  <p>同时参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/svnmerge/svnmerge.README">svnmerge.README</a>。</p>
 
 
   <h3><a name="svnmerge_sh"
@@ -486,12 +484,11 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="vc_svn_el"
     href="http://svn.collab.net/repos/svn/trunk/contrib/client-side/emacs/vc-svn.el">vc-svn.el</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/client-side">contrib/client-side/emacs</a>)</h3>
-  <p>Subversion的Emacs接口,使Subversion能够集成到Emacs的VC中.(译者注:vc是emacs的版本控制模式)
+  <p>Subversion的Emacs接口，使Subversion能够集成到Emacs的VC中。(译者注：vc是emacs的版本控制模式。)
   </p>
-  <p>需要注意的是,在SVN的版本目录下的vc_svn_el并不是主开发版本,
-  	最新的版本是放置在FSF Emacs版本目录下,可以通过
-     <a href="http://savannah.gnu.org/cgi-bin/viewcvs/emacs/emacs/lisp/vc-svn.el">http://savannah.gnu.org/cgi-bin/viewcvs/emacs/emacs/lisp/vc-svn.el</a>来访问.
-     这里的版本只是为了兼容以前旧版本的Emacs而维护的,因为FSF版本库中还没有将此文件打包到任何一个Emacs官方发行包中.
+  <p>需要注意的是,在SVN的版本目录下的vc_svn_el并不是主开发版本，最新的版本是放置在FSF Emacs版本目录下，可以通过<a 
+  href="http://savannah.gnu.org/cgi-bin/viewcvs/emacs/emacs/lisp/vc-svn.el">http://savannah.gnu.org/cgi-bin/viewcvs/emacs/emacs/lisp/vc-svn.el</a>
+  来访问。这里的版本只是为了兼容以前旧版本的Emacs而维护的，因为FSF版本库中还没有将此文件打包到任何一个Emacs官方发行包中。
   </p>
 
 
@@ -536,22 +533,21 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="getsigs_pl"
     href="http://svn.collab.net/repos/svn/trunk/tools/dist/getsigs.pl">getsigs.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dist">tools/dist</a>)</h3>
-  <p>这个脚本用来验证并获取发行的tar文件的签名,我们在声明中会使用这些内容.
+  <p>这个脚本用来验证并获取发行的tar文件的签名，我们在声明中会使用这些内容。
   </p>
 
 
   <h3><a name="gnuify_changelog_pl"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/gnuify-changelog.pl">gnuify-changelog.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>一个用来将svn的日志输出转换成GNU ChangeLog风格的脚本.
+  <p>一个用来将svn的日志输出转换成GNU ChangeLog风格的脚本。
   </p>
 
 
   <h3><a name="graph_dav_servers_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/graph-dav-servers.py">graph-dav-servers.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>这原先是用来在svn的DAV服务器上生成一副不错的图片用的(This was originally a quick hack to make a pretty picture of svn
-     DAV servers).
+  <p>这原先是用来在svn的DAV服务器上生成一副不错的图片用的。
   </p>
 
 
@@ -584,26 +580,22 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="mlpatch_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/mlpatch.py">mlpatch.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>非常令人讨厌的是,http://svn.haxx.se/的Subversion邮件列表存档把内嵌的补丁弄得一团糟,
-  	并且不提供下载(除了存储整个月的邮件信息的mbox).
-  	因此我写了这个脚本,来把他们重新归整,这个脚本并不是很完美,它还得对一些空格进行猜测.
-  	但至少能够正常工作.
+  <p>非常令人讨厌的是,http://svn.haxx.se/的Subversion邮件列表存档把内嵌的补丁弄得一团糟，
+  	并且不提供下载（除了存储整个月的邮件信息的mbox）。因此我写了这个脚本，来把他们重新归整，这个脚本并不是很完美，它还得对一些空格进行猜测，但至少能够正常工作。
   </p>
 
 
   <h3><a name="normalize_dump_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/normalize-dump.py">normalize-dump.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>读取Subversion的转储文件(Dumpfile)(如果没有指定文件,则从标准输入设备中读取),然后格式化其中包含的所有元信息,并输出经过统计的,已排序的信息.这在生成不同样式的转储文件方面比较有用.
+  <p>读取Subversion的转储文件(Dumpfile)(如果没有指定文件，则从标准输入设备中读取)，然后格式化其中包含的所有元信息，并输出经过统计的，已排序的信息。这在生成不同样式的转储文件方面比较有用。
   </p>
 
 
   <h3><a name="po_merge_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/po-merge.py">po-merge.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>这个脚本将用从标准输入读入的一个po源文件中的转化和标志位去替换目标po文件中
-     的转化和标志位。（translations and flags in a po file）在源文件中没有被找到的
-     字符串将会保留不处理。
+  <p>这个脚本将用从标准输入读入的一个po源文件中的翻译和标志位去替换目标po文件中的翻译和标志位。在源文件中没有被找到的字符串将会保留不处理。
   </p>
 
 
@@ -630,23 +622,21 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="stress_pl"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/stress.pl">stress.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>一个用来对subversion服务器进行简单测试的脚本，主要是模拟多个svn客户端同时进行读、写或者又读又写访问的情况。
-     它还可以产生一个包含有大量文件和目录的工作拷贝树。所有的版本库访问都是通过svnadmin和svn命令实现。
+  <p>一个用来对subversion服务器进行简单测试的脚本，主要是模拟多个svn客户端同时进行读、写或者又读又写访问的情况。它还可以产生一个包含有大量文件和目录的工作拷贝树。所有的版本库访问都是通过svnadmin和svn命令实现。
   </p>
 
 
   <h3><a name="svn_dev_el"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/svn-dev.el">svn-dev.el</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>代码时候用的Emacs Lisp的辅助文件。它包含有一些在使用subversion时候很有用的elisp函数。
+  <p>代码时候用的Emacs Lisp的辅助文件，它包含有一些在使用subversion时候很有用的elisp函数。
   </p>
 
 
   <h3><a name="svn_dev_vim"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/svn-dev.vim">svn-dev.vim</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>这个文件是用来在vim中装入subversion的编码风格，它可以在每一个vim程序底部的
-     命令行中用:source svn-dev.vim打开，也可以在~/.vimrc设置，作用于今后vim处理的所有文件。其他用法请参看:help autocmd。
+  <p>这个文件是用来在vim中装入subversion的编码风格，它可以在每一个vim程序底部的命令行中用:source svn-dev.vim打开，也可以在~/.vimrc设置，作用于今后vim处理的所有文件。其他用法请参看:help autocmd。
   </p>
 
 
@@ -672,8 +662,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="warn_ignored_err_sh"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/warn-ignored-err.sh">warn-ignored-err.sh</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>从每一个返回subversion错误值的函数中插入或者移除GCC的“warn_unused_result”属性，
-     通常作用于指定的文件，默认是./subversion和./tools目录树中所有扩展名为*.h和*.c的文件。
+  <p>从每一个返回subversion错误值的函数中插入或者移除GCC的“warn_unused_result”属性，通常作用于指定的文件，默认是./subversion和./tools目录树中所有扩展名为*.h和*.c的文件。
   </p>
 
 
@@ -723,7 +712,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="check_mime_type_pl"
     href="http://svn.collab.net/repos/svn/trunk/contrib/hook-scripts/check-mime-type.pl">check-mime-type.pl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/hook-scripts">contrib/hook-scripts</a>)</h3>
-  <p>检查每个新增加的文件是否都设置了svn:mime-type属性,如果文件的svn:mime-type属性值匹配"text/*"模式的话,那么该文件必须同时设置svn:eol-style属性.如果任一文件没有通过检查,则返回详细的错误信息给用户,并给出建议的解决方案,并且中止当前提交动作.
+  <p>检查每个新增加的文件是否都设置了svn:mime-type属性，如果文件的svn:mime-type属性值匹配"text/*"模式的话，那么该文件必须同时设置svn:eol-style属性。如果任一文件没有通过检查，则返回详细的错误信息给用户，并给出建议的解决方案，并且中止当前提交动作。
   </p>
 
 
@@ -788,9 +777,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="mailer_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/hook-scripts/mailer/mailer.py">mailer.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/hook-scripts/mailer">tools/hook-scripts/mailer</a>)</h3>
-  <p>用Python/SWIG绑定的方法直接查询一个版本库的特定版本号的修改信息。这个程序通过一个配置文件进行基本的配置和
-     修改位置的微调。对比<a href="#commit_email_pl">commit-email.pl</a>，它的结果输出中包含有更多关于属性修改的信息，
-     处理二进制文件更智能，而且将结果通过电子邮件输出（避免了缓存的占用）。
+  <p>用Python/SWIG绑定的方法直接查询一个版本库的特定版本号的修改信息。这个程序通过一个配置文件进行基本的配置和修改位置的微调。对比<a href="#commit_email_pl">commit-email.pl</a>，它的结果输出中包含有更多关于属性修改的信息，处理二进制文件更智能，而且将结果通过电子邮件输出（避免了缓存的占用）。
   </p>
   <p>相关文件：
     <a href="http://svn.collab.net/repos/svn/trunk/tools//hook-scripts/mailer/mailer.conf.example">mailer.conf.example</a>
@@ -822,8 +809,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svnperms_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/hook-scripts/svnperms.py">svnperms.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/hook-scripts">tools/hook-scripts</a>)</h3>
-  <p>一个用来检查写权限的预提交的挂钩脚本，类似于<a href="#commit_access_control_pl">commit-access-control.pl</a>,
-     但是使用的不同的语法，可以通过运行'svnperms.py -h'来获得使用帮助。
+  <p>一个用来检查写权限的预提交的挂钩脚本，类似于<a href="#commit_access_control_pl">commit-access-control.pl</a>，但是使用的不同的语法，可以通过运行'svnperms.py -h'来获得使用帮助。
   </p>
   <p>相关文件：
     <a href="http://svn.collab.net/repos/svn/trunk/tools/hook-scripts/svnperms.conf.example">svnperms.conf.example</a>
@@ -844,7 +830,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="l10n_report"
     href="http://svn.collab.net/repos/svn/trunk/tools/po/l10n-report.py">l10n-report.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/po">tools/po</a>)</h3>
-  <p>这个脚本用来生成一个关于po文件转换状态的报告然后讲报告按照电子邮箱名通过邮件发送出去。报告内容将默认在标准输出上显示。</p>
+  <p>这个脚本用来生成一个关于po文件转换状态的报告然后讲报告按照电子邮箱名通过邮件发送出去，报告内容将默认在标准输出上显示。</p>
 
   <h3><a name="po_update_sh"
     href="http://svn.collab.net/repos/svn/trunk/tools/po/po-update.sh">po-update.sh</a>
@@ -866,15 +852,14 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="backup_recipe_sh"
     href="http://svn.collab.net/repos/svn/trunk/contrib/server-side/backup-recipe.sh">backup-recipe.sh</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/server-side">contrib/server-side</a>)</h3>
-  <p>这个脚本通过一个标准的full+incrementals处理流程，展示了如何对一个在线的subversion版本库进行备份和恢复的方法。
+  <p>这个脚本通过一个标准的完全+增量的处理流程，展示了如何对一个在线的subversion版本库进行备份和恢复的方法。
   </p>
 
 
   <h3><a name="fsfs_reshard_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/server-side/fsfs-reshard.py">fsfs-reshard.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/server-side">tools/server-side</a>)</h3>
-  <p>这个脚本实现FSFS版本库在1.4极其以后版本兼容的线性格式和1.5版
-     本包含的共享格式之间的离线格式转换。
+  <p>这个脚本实现FSFS版本库在1.4极其以后版本兼容的线性格式和1.5版本包含的共享格式之间的离线格式转换。
   </p>
 
 
@@ -883,13 +868,13 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/server-side/mod_dontdothat">contrib/server-side/mod_dontdothat</a>)</h3>
   <p>一个Apache的模块，允许你阻止大数据量的subversion请求,比如从根目录开始检出一个很大的版本库。
   </p>
-  <p>同时参看 <a href="http://svn.collab.net/repos/svn/trunk/contrib/server-side/mod_dontdothat/README">README</a>.</p>
+  <p>同时参看<a href="http://svn.collab.net/repos/svn/trunk/contrib/server-side/mod_dontdothat/README">README</a>。</p>
 
 
   <h3><a name="svn_backup_dumps_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/server-side/svn-backup-dumps.py">svn-backup-dumps.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/server-side">tools/server-side</a>)</h3>
-  <p>这个脚本用于从Windows和类Unix系统上的SVN版本库中创建一些增量的转储文件,这个脚本主要用在执行一些定时的计划任务,还有post-commit钩子脚本中.
+  <p>这个脚本用于从Windows和类Unix系统上的SVN版本库中创建一些增量的转储文件，这个脚本主要用在执行一些定时的计划任务,还有post-commit钩子脚本中。
   </p>
 
 
@@ -921,8 +906,7 @@ subversion项目本身并不维护这些程序代码，仅仅只是为了用户使用方便而发布它们。
   <h3><a name="svnindex_xsl"
     href="http://svn.collab.net/repos/svn/trunk/tools/xslt/svnindex.xsl">svnindex.xsl</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/xslt">tools/xslt</a>)</h3>
-  <p>当使用"SVNIndexXSLT"的时候，mod_dav_svn将会生成一张
-     转换风格的XML表单，用来显示subversion的目录列表。
+  <p>当使用"SVNIndexXSLT"的时候，mod_dav_svn将会生成一张转换风格的XML表单，用来显示subversion的目录列表。
   </p>
   <p>相关文件：
     <a href="http://svn.collab.net/repos/svn/trunk/tools/xslt/svnindex.css">svnindex.css</a>
